2019-09-23  Andrew Sutton  <asutton@lock3software.com>

	Remove unused memoization code for constraints and concepts.
	* cp-tree.h (lookup_constraint_satisfaction): Removed.
	(memoize_constraint_satisfaction): Removed.
	(lookup_concept_satisfaction): Removed.
	(memoize_concept_satisfaction): Removed.
	(get_concept_expansion): Removed.
	(save_concept_expansion): Removed.
	* pt.c (constraint_sat_entry): Removed.
	(constraint_sat_hasher): Removed.
	(concept_spec_entry): Removed.
	(concept_spec_hasher): Removed.
	(constraint_memos): Removed.
	(concept_memos): Removed.
	(lookup_constraint_satisfaction): Removed.
	(memoize_constraint_satisfaction): Removed.
	(lookup_concept_satisfaction): Removed.
	(memoize_concept_satisfaction): Removed.
	(concept_expansions): Removed.
	(get_concept_expansion): Removed.
	(save_concept_expansion): Removed.
	(init_constraint_processing): Remove initialization of non-existing
	resources.

2019-09-23  Andrew Sutton  <asutton@lock3software.com>

	Merge diagnostics into satisfaction, so that we reuse the code for
	the similar tasks. Remove some unused satisfaction and diagnostic
	code.
	* constraint.cc (subst_info): Add noisy () and quiet () to test for
	diagnostic flags.
	(satisfy_disjunction): Quietly test operands and emit a diagnostic
	if both fail.
	(satisfy_atom): Conditionally diagnose errors during satisfaction.
	(satisfy_constraint): Take subst_info from caller.
	(satisfy_associated_constraints): Likewise.
	(satisfy_constraint_expression): Likewise.
	(satisfy_constraint_expression): Provide empty substitution info.
	(constraint_expression_satisfied_p): Take subst_info from caller.
	Don't cache results if we're diagnosing the error (otherwise, we
	can miss diagnosing errors). New overload that does not take
	subst_info.
	(constraints_satisfied_p): Take subst_info from caller. New overload
	that does not take subst_info.
	(evaluate_function_concept): Removed (not used).
	(evaluate_variable_concept): Likewise.